2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/FLAC/FLAC.* update to newer FLAC API
	* Bundles/FLAC/FLACTags.m update to newer FLAC API
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* BundleManager.m make it find Cynthiunes bundles, and simplify
	  some while loops
	* Bundles/*/GNUmakefile install bundles in right location
	* Bundles/*/GNUmakefile.preamble do not link against mcheck when
	  debug flag is set
2012-03-25  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Initial Import to GAP CVS
2006-03-31  Wolfgang Sourdeau  <Wolfgang@Contre.COM>

	* GNUmakefile: release 0.9.5.

	* Player.m ([Player -readNextChunk:bufferwithSize:bufferSize]):
	return 0 if the code returned was 0 or less.

2006-03-28  Wolfgang Sourdeau  <Wolfgang@Contre.COM>

	* PlaylistView.m ([PlaylistView -_selectionTopByExtendingIt:keep]) 
	([PlaylistView -_selectionBottomByExtendingIt:keep]): take
	selectionDir into account.

	* PlaylistController.m ([PlaylistController -updateStatusLabel]):
	made public.
	([PlaylistController -toggleShuffle:sender]): shuffle also if
	currentPlayerSong is not set.
	Adapted to new (closer) relationship with PlaylistViewController.

	* PlaylistViewController.m: removed setDelegate:, replaced it with
	the more appropriate "setPlaylistController" since we know for
	sure there will be one. Removed all the custom notifications from
	this class and invoke directly some new methods from the
	playlistController.

	* CynthiuneController.m ([CynthiuneController -awakeFromNib]): set
	the playlistWindow as the next responder for the playerWindow.

	* PlaylistView.m ([PlaylistView -performKeyEquivalent:event]):
	overload this method instead of keyDown: which is "lower-level"
	and is not invoked when the key event occurs when the focus is on
	another widget.
	([PlaylistView -_selectionUpByExtendingIt:keep]) 
	([PlaylistView -_selectionDownByExtendingIt:keep]) 
	([PlaylistView -_selectionTopByExtendingIt:keep]) 